@@ -8,6 +8,8 @@
         * Eliminated unnecssary log message
         * Replaced abort(), due to unsupported remote LDM version, with log_error() and ECONNABORTED
           return value
+        * man(1) page: Corrected description of number of bytes, number of products, and peak
+          latency parameters: they are not for "this hour" but since rtstats(1) was started
 
     Documentation:
         * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
